Fixed overflow-x

--- a/src/components/FileView/FileView.css
+++ b/src/components/FileView/FileView.css
@@ -2,6 +2,7 @@
     font-family: 'Poppins', sans-serif;
     height: 100vh;
     /*    width: 100vw;*/
+    overflow-x: hidden;
     overflow-y: scroll;
 }
 
